--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
         "url": "https://github.com/Jack-Pham/email-survey/server"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "author": "Thong Pham",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.17.1"
+        "cookie-session": "^1.4.0",
+        "express": "^4.17.1",
+        "mongoose": "^6.0.4",
+        "nodemon": "^2.0.12",
+        "passport": "^0.4.1",
+        "passport-google-oauth20": "^2.0.0"
     },
     "engines": {
         "node": "16.4.0",
