--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "start": "node index.js",
         "server": "nodemon index.js",
         "client": "yarn --cwd client start",
-        "dev": "concurrently \"yarn server\" \"yarn client\""
+        "dev": "concurrently \"yarn server\" \"yarn client\"",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --cwd client install && yarn --cwd client build"
     },
     "author": "Thong Pham",
     "license": "MIT",
